--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^2.0.0-beta.1",
     "connect-flash": "^0.1.1",
     "connect-redis": "^6.1.3",
     "dotenv": "^16.0.1",
     "express": "^5.0.0-beta.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.4.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
@@ -26,7 +28,8 @@
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "redis": "^4.1.0",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "eslint": "^8.18.0",
